# hitostubakaede.ai

./: .gitattributes  .gitignore  BUILD_SUMMARY.md  KAEDE_MASTER_INSTRUCTION.md  README.md  SUMMARY_PROMPT_2026-02-26_V1.md
kaede-app/: .gitignore  FULL_AI_SETUP.md  LLAMA_SETUP.md  README.md  build.gradle.kts  build_output.txt  download-gemma-270m.ps1  download-gemma-model.ps1  download-model.ps1  gradle.properties  settings.gradle.kts  setup-llama.ps1  setup-llama.sh
kaede-app/app/: build.gradle.kts  proguard-rules.pro
kaede-app/app/src/main/: AndroidManifest.xml
kaede-app/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp  mlc-jni.cpp
kaede-app/app/src/main/java/com/kaede/app/: KaedeApplication.kt  MainActivity.kt
kaede-app/app/src/main/java/com/kaede/app/ai/: GenerationResult.kt  MlcLlm.kt  ModelLoadState.kt  ModelValidator.kt  PersonalityManager.kt  PromptBuilder.kt  QueryClassifier.kt  TokenBuffer.kt
kaede-app/app/src/main/java/com/kaede/app/util/: BatteryOptimizer.kt  PerformanceMonitor.kt
kaede-app/app/src/main/java/com/kaede/app/viewmodel/: ChatViewModel.kt  ChatViewModelFactory.kt
kaede-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
kaede-app/app/src/main/res/values/: ic_launcher_colors.xml  strings.xml  themes.xml
kaede-app/gradle/wrapper/: gradle-wrapper.properties
kaede-app/llama-lib/: build.gradle.kts
kaede-app/model/: README.md
kaede-app/smollm/: build.gradle.kts
kaede-app/smollm/src/main/cpp/: CMakeLists.txt
llama-jni/gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
